--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.9",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
     "vite": "^5.2.0"
   }
 }
